Getting results-loader to finally work

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
 <div>
     <div class="menu">
         <div>
-            <h2 class="title">Sorting Benchmark</h2>
-            <a class="gitHubLink" href="https://github.com/jonperk318/sorting-algorithms">View on GitHub</a>
+            <h2 class="title">Sorting Algorithm Comparison in Four Languages</h2>
+            <a class="gitHubLink" href="https://github.com/jonperk318/sorting-algorithms">View Project on GitHub</a>
         </div>
-        <ul id="suitesMenu"></ul>
+        <ul id="sectionMenu"></ul>
     </div>
     <div class="container">
         <div class="section">
-            <canvas id="sortChart"></canvas>
+            <canvas id="sortingChart"></canvas>
         </div>
     </div>
-    <script src="bundle.js"></script>
+    <script src="index.js"></script>
 </div>
 </body>
 </html>
