Refactoring index and editing css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Algorithms in Four Languages</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="results.js"></script>
+    <link rel="stylesheet" href="./dist/styles.css">
+    <script src="./dist/results.js"></script>
 </head>
 <body>
 <div>
@@ -21,7 +21,7 @@
             <canvas id="sortChart"></canvas>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="./dist/main.js"></script>
 </div>
 </body>
 </html>
